gccida/c3/resolve_operand_name_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/resolve_operand_name_1/src/stmt.c:2621:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)chain->int_cst.rtl[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/resolve_operand_name_1/src/stmt.c:2645:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)inputs->int_cst.rtl[1].fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/resolve_operand_name_1/src/stmt.c:2668:16: error: use of undeclared identifier 'off_6474F4'
sprintf( v10, &off_6474F4[1], v7); 
               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/resolve_operand_name_1/src/obj/stmt.o] Error 1
